--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
 	"description": "My Alchemy App",
 	"version": "0.1.0",
 	"dependencies": {
+		"alchemy-ds-linvodb3": "^0.3.0",
 		"alchemymvc": "~1.3.2"
 	},
 	"engines": {
 		"node": ">=14.0.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.22"
 	}
 }
